# QKD_Winnow_V

./: .gitignore  CMakeLists.txt  config copy.json  config.json
example/: winnow_example.cpp
src/: bit_array_operations.cpp  bit_array_operations.hpp  config.cpp  config.hpp  main.cpp  simulation.cpp  simulation.hpp  utils.cpp  utils.hpp  winnow_algorithm.cpp  winnow_algorithm.hpp
